[package]
name = "cargo-crates"
version = "0.1.2"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ThePuzzlemaker/cargo-crates"
homepage = "https://github.com/ThePuzzlemaker/cargo-crates"
license = "MIT"
description = "A cargo command to quickly open the crates.io or docs.rs page for the latest version of a crate"
keywords = ["cargo", "crates-io", "command-line-utilities", "development-tools::cargo-plugins"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-crates"

[dependencies]
clap = "2.33.1"
opener = "0.4.1"
cargo = "~0"
crates_io_api = "0.6.0"
