[package]
name = "cargo-crates"
version = "0.1.5"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ThePuzzlemaker/cargo-crates"
homepage = "https://github.com/ThePuzzlemaker/cargo-crates"
license = "MIT"
description = "A cargo command to quickly open the crates.io or docs.rs page for the latest version of a crate"
keywords = ["cargo", "crates-io", "development-tools", "cargo-plugins"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-crates"

[dependencies]
clap = "2.34.0"
opener = "0.5.0"
cargo = "~0"
